@@ -29,11 +29,6 @@
 
 
 
-//forward declarations. See in DDPandoraPFANewProcessor.cc
-double getFieldFromLCDD(); 
-DD4hep::DDRec::LayeredCalorimeterData * getExtension(std::string detectorName);
-
-std::vector<double> getTrackingRegionExtent();
 
 DDTrackCreatorBase::DDTrackCreatorBase(const Settings &settings, const pandora::Pandora *const pPandora) :
     m_settings(settings),
