@@ -30,12 +30,6 @@
 #include "DD4hep/DetectorSelector.h"
 
 
-//forward declarations. See in DDPandoraPFANewProcessor.cc
-double getFieldFromLCDD(); 
-DD4hep::DDRec::LayeredCalorimeterData * getExtension(std::string detectorName);
-
-std::vector<double> getTrackingRegionExtent();
-
 DDTrackCreatorILD::DDTrackCreatorILD(const Settings &settings, const pandora::Pandora *const pPandora) : DDTrackCreatorBase(settings,pPandora)
 {
     
